# practical_ai_engineering

./: .env.example  .gitignore  README.md  conda_setup_readme.md  environment.yaml  pyproject.toml
day_1/notebooks/: day_1_nb_1_building_agents_from_scratch.ipynb  day_1_nb_2_intro_openai_agents_sdk.ipynb
day_1/notebooks_v2/: day_1_agent_foundations_and_OpenAI_Agent_SDK.ipynb
day_2/notebooks/: day_2_nb_tools_and_memory.ipynb
day_2/scripts/: ask.py  chat.py
day_2/src/agent_workshop/: __init__.py  agents.py  config.py  prompts.py
day_2/src/agent_workshop/tools/: __init__.py  crypto.py  currency_converter.py  files.py  gold_price.py  prices.py  search.py  weather.py
day_2/tests/: test_crypto.py  test_files.py  test_weather.py
day_3/notebooks/: day_3_nb_building_reliable_multi_agent.ipynb
day_4/: README.md
day_4/notebooks/: practical_rag_workshop.ipynb
day_4/scripts/: ask.py  ingest.py
day_4/src/rag_workshop/: __init__.py  config.py  evaluation.py  ingestion.py  rag.py  schemas.py  validation.py
day_4/tests/: test_evaluation.py  test_validation.py
day_5/: capstone_brief.md  day_5_capstone.pptx
