[project]
name = "practical-ai-engineering"
version = "0.1.0"
description = ""
authors = [
    {name = "Saed Hussain"}
]
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "jupyterlab (>=4.5.7,<5.0.0)",
    "openai-agents (>=0.17.3,<0.18.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "notebook (>=7.5.7,<8.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "pypdf (>=6.13.3,<7.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=9.1.1,<10.0.0)"
]

[tool.poetry]
# dropping package-mode = false to enable shared package
# Shared packages — installed editably so they can be imported from notebooks,
# scripts, and tests after `poetry install`.
packages = [
    { include = "agent_workshop", from = "day_2/src" },  # Day 2 — tools + memory
    { include = "rag_workshop", from = "day_4/src" },    # Day 4 — RAG pipeline
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
